// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MemberPlans Container should render Default 1`] = `
<DocumentFragment>
  <div
    class="css-bdz642"
  >
    <h1>
      Welcome to MemberPlans!
    </h1>
  </div>
</DocumentFragment>
`;

exports[`MemberPlans Container should render WithClassName 1`] = `
<DocumentFragment>
  <div
    class="extra-classname css-bdz642"
  >
    <h1>
      Welcome to MemberPlans!
    </h1>
  </div>
</DocumentFragment>
`;
